# mechanistic-interpretability

transformer_from_scratch/: pyproject.toml
transformer_from_scratch/transformer_from_scratch/: ModelConfig.py  main.py
transformer_from_scratch/transformer_from_scratch/Transformer/: LayerNorm.py
transformer_from_scratch/transformer_from_scratch/tests/: LayerNormTests.py
