[tool.poetry]
name = "transformer-from-scratch"
version = "0.1.0"
description = ""
authors = ["Gerome Meyer <gerome.meyer@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
wandb = "^0.17.1"
transformer-lens = "^2.1.0"
datasets = "^2.20.0"
einops = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
